# Hvl_surface_calculation_API

./: .gitignore  API_README.md  README.md  config.py  extractor.py  hvl_api.py  hvl_batch.py  hvl_extractor.py  main.py  pyproject.toml  requirements.txt  verify_db.py
01_inputs/: ELABORATORE PREVENTIVI E SALVATAGGIO PREV 202601.docx  ELABORATORE PREVENTIVI E SALVATAGGIO PREV 202602.docx  Elaborato Preventivi 2026 rev00 R0505 --- PROVA AI 2026-02-25 ---.xlsx  I_ Richiesta d'offerta IMMERGAS .msg  R 0501 Rev 02 PreventivoLineaAuto DF PREV 202601.docx  R 0501 Rev 02 PreventivoLineaAuto DF PREV 202602.docx  R 0501 Rev 02 PreventivoLineaAuto DF.docx  README.txt  Rdo 377-25 Franke.eml  Specifiche risorse.xlsx  Valuazione prezzi MP ral  x virevo.xlsx
03_archive/: README.txt
api/: routes.py
core/: processor.py
db/: connection.py  operations.py  repository.py
